# colleges-ai-uts

./: .env  .gitignore  colloquial-indonesian-lexicon.csv:Zone.Identifier  pyproject.toml
src/: main.py
src/common/: env.py
src/core/: db.py
src/helpers/: static.py
src/models/: alert.py  preprocess.py
src/routes/: alerts.py  preprocess.py  views.py
src/templates/: index.html
